# whisper-small-medical

./: .gitignore  main.py  pyproject.toml  train-nvidia.py  train.py
